# anci

./: .gitignore  README.md  justfile  pyproject.toml
src/anci/: __init__.py  _action.py  _arg.py  _main.py  _tree.py  _types.py  typing.py
src/anci/handlers/: __init__.py  _annotated.py  _type.py
src/tests/: test_handlers.py
