[project]
name = "anci"
version = "0.1.4"
description = "Annotated command-line interfaces in Python"
readme = "README.md"
authors = [
    { name = "Tom Ouellette", email = "touellette112@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.optional-dependencies]
tests = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
